bug fix: minutely not available in some regions feature?: more spacing between options

--- a/evergreen_newtab/evergreen.css
+++ b/evergreen_newtab/evergreen.css
@@ -111,7 +111,7 @@ a.popper:focus {
 }
 
 .br {
-    height: 7px;
+    height: 12px;
 }
 
 #menu .modal-footer {
